--- a/Docs/Paper/LaTex/template.tex
+++ b/Docs/Paper/LaTex/template.tex
@@ -518,14 +518,23 @@ The arithmetic expressions from lines $10$ to $12$ represent the constraints des
 \label{Experimental-Evaluation}
 %----------------------------------------------
 
-This section is split into two parts. The setup is described in Section~\ref{Experimental-Setup} while Section~\ref{Experimental-Results} describes a comparison among Matlab~\cite{TheMathWorks2013}, $\nu$Z~\cite{Bjorner2015}, and ESBMC~\cite{Trindade2015} using a set of standard HW-SW partitioning benchmarks~\cite{Mann2007}.
+This section is split into three parts. The setup is described in Section~\ref{Experimental-Setup}, while Section~\ref{Benchmarks-Description} describes all benchmarks that were used for performing the experimental evaluation. Section~\ref{Experimental-Results} reports a comparison among Matlab~\cite{TheMathWorks2013}, Multi-Core ESBMC, and MaxSMT $\nu$Z~\cite{Bjorner2015} using a set of standard HW-SW partitioning benchmarks~\cite{Mann2007}.
 
 %----------------------------------------------
 \subsection{Experimental Setup}
 \label{Experimental-Setup}
 %----------------------------------------------
 
-To perform the experiments, some test vectors provided by Mann {\it et al.}~\cite{Mann2007} are used, as shown in Table~\ref{Description-of-Benchmarks}. The vertices in the graphs correspond to high-level language instructions. Software and communication costs are time dimensional, and hardware costs represent the occupied area. The first three benchmarks are extracted from MiBench~\cite{Guthaus2001}. The clustering and fuzzy test vectors benchmarks are designed from Mann et al.~\cite{Mann2007} and are significantly larger benchmarks. From the same authors,  very complex benchmarks to test the limits of the applicability of techniques are collected (RC$6$ and Mars).
+ESBMC $1$.$24$ running on a $64$-bit Ubuntu $14$.$04$.$1$ LTS operating system was used. A parallel approach of the ESBMC-SS, ESBMC-PS, ESBMC-PB were implemented in C$++$11. Version $2$.$0$.$1$ of Boolector SMT-solver~\cite{Brummayer2009} (freely available) was used as the default solver for ESBMC. For ILP and GA formulations, MATLAB R$2013$a from MathWorks with Parallel Computing Toolbox was used~\cite{TheMathWorks2013}. MATLAB is a dynamically typed high-level language, known as the state-of-the-art mathematical software~\cite{Tranquillo2011} and is widely used by the engineering community~\cite{Hong2010}. ESBMC-$\nu$Z as a built-in tool to Z3 was also used~\cite{Bjorner2014}. 
+
+All experiments were conducted on an otherwise idle Intel Core i$7$-$2600$ ($8$-cores), with $3$.$4$ GHz and $24$ GB of RAM, running Ubuntu $64$-bits. Each time was measured $3$ times in GA (average taken) and just once in ESBMC, $\nu$Z, and ILP. The reason is that GA times are not so close as ESBMC, $\nu$Z, and ILP. A time out condition (TO) is reached when the verification time is longer than $7200$ seconds. A memory out (MO) occurs when the tool reaches $24$GB of memory. 
+
+%----------------------------------------------
+\subsection{Description of Benchmarks}
+\label{Benchmarks-Description}
+%----------------------------------------------
+
+To perform the experiments, some benchmarks provided by Mann {\it et al.}~\cite{Mann2007} were used, as shown in Table~\ref{Description-of-Benchmarks}. The nodes in the graphs correspond to high-level language instructions. Software and communication costs are time dimensional, and hardware costs represent the occupied area. The first three benchmarks are extracted from MiBench~\cite{Guthaus2001}. The clustering and fuzzy benchmarks are designed from Mann {\it et al.}~\cite{Mann2007} and are significantly large benchmarks. From the same authors, very complex benchmarks to test the limits of the applicability of techniques were used (RC$6$ and Mars).
 
 \begin{table}[h]
 \caption {Description of Benchmarks}
@@ -557,22 +566,17 @@ To perform the experiments, some test vectors provided by Mann {\it et al.}~\cit
 \label{Description-of-Benchmarks}
 \end{table}
 
-ESBMC $1$.$24$ running on a $64$-bit Ubuntu $14$.$04$.$1$ LTS operating system was used. A parallel approach of the ESBMC sequential ascending, descending, and binary search are implemented in C++$11$. Version $2$.$0$.$1$ of Boolector SMT-solver~\cite{Brummayer2009} (freely available) was used as the default solver for ESBMC. For ILP and GA formulations, MATLAB R$2013$a from MathWorks with Parallel Computing Toolbox was used~\cite{TheMathWorks2013}. MATLAB is a dynamically typed high-level language known as the state-of-the-art mathematical software~\cite{Tranquillo2011} and is widely used by the engineering community~\cite{Hong2010}. $\nu$Z as a built-in tool to Z3 was also used~\cite{Bjorner2014}. 
-
-A desktop with $24$GB of RAM and i$7$ ($8$-cores) from Intel with CPU clock of $3$.$40$ GHz was used. Each time was measured $3$ times in GA (average taken) and just once in $\nu$Z, ESBMC, and ILP. The reason is that GA times are not so close as ILP, $\nu$Z, and ESBMC. A time out condition (TO) is reached when the running time is longer than $7200$ seconds. A memory out (MO) occurs when the tool reaches $24$GB of memory. 
-
-
 %----------------------------------------------
 \subsection{Experimental Results}
 \label{Experimental-Results}
 %----------------------------------------------
 
-ESBMC implement four approaches: ESBMC, ESBMC Multicore (MC), ESBMC Parallel Sequential (PS), and ESBMC Parallel binary (PB).
+ESBMC implement four approaches: ESBMC, ESBMC-SS, ESBMC-PS, ESBMC-PB, and ESBMC-$\nu$Z.
 
 \begin{itemize}
 \item{\textbf{ESBMC:} This strategy uses only one core to solve the partitioning problem, as described in Section~\ref{Verification-Algorithm-using-ESBMC}.
-\item{\textbf{ESBMC-SS:} This uses a sequential strategy \{1 ,2 ,\:...\:, Hmax\}; there is no parallel controller in this approach, as described in Section~\ref{Multi-core-ESBMC-with-OpenMP}.}
-\item{\textbf{ESBMC-PS:} This approach is similar to ESBMC MC; however, it uses a more optimized way to launch the ESBMC instances, as described Section~\ref{Multi-core-ESBMC-with-OpenMP-using-workers}.}
+\item{\textbf{ESBMC-SS:} This uses a sequential strategy \{1 ,2 ,\:...\:, Hmax\}, where there is no parallel controller, as described in Section~\ref{Multi-core-ESBMC-with-OpenMP}.}
+\item{\textbf{ESBMC-PS:} This approach is similar to ESBMC-SS; however, it uses a more optimized way to launch the ESBMC instances, as described Section~\ref{Multi-core-ESBMC-with-OpenMP-using-workers}.}
 \item{\textbf{ESBMC-PB:} This strategy uses a parallel binary search, as described in Section~\ref{Multi-core-ESBMC-with-OpenMP-using-Binary-Search}.}}
 \end{itemize}
 
