Change of title

--- a/Docs/Paper/LaTex/template.tex
+++ b/Docs/Paper/LaTex/template.tex
@@ -113,7 +113,7 @@ grestore
 \newcommand{\comment}[1]{}
 
 \begin{document}
-\title{Applying Multi-Core Model Checking and Maximum Satisfiability to Hardware-Software Partitioning}
+\title{Multi-Core Model Checking and Maximum Satisfiability Applied to Hardware-Software Partitioning}
 \author{Alessandro Trindade\and Hussama Ismail\and Renato Degelo\and Edilson Galv\~ao\and Helder Silva \and Lucas Cordeiro}
 
 \institute{A. Trindade, H. Ismail, R. Degelo, E. Galv\~ao \at
